public/css/styles.css
body {
    /* display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    -ms-flex-align: center;
    -ms-flex-pack: center;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: center;
    justify-content: center; */
    background-color: rgb(255, 255, 255);
    height: 100%;
}

.bg-dark {
    --bs-bg-opacity: 1;
    background-color: rgb(152, 158, 167) !important;
}

#top-navbar, #side-navbar {
    border: 3px solid black;
    border-radius: 5px;
}

.top-bar, .main-content {
    width: 81.6%;
    position: relative;
    margin-right: 0;
    float: right;
}

.sidebar {
    width: 18.4%;
    height: 100%;
    margin-top: 0;
    margin-left: 0;
    margin-right: auto;
}

.map-image {
    float: left;
    margin-right: 1rem;
    border: 2px solid black;
}

#map_image {
    float: left;
}

.nursepic {
    width: 100%;
    max-width: 330px;
}

.medcallimg {
    display: flex;
    justify-content: center;
}

.main-text {
    margin-top: -3rem;
}

.form-signin {
    width: 100%;
    max-width: 330px;
    padding: 15px;
    margin: 0 auto;
}

.form-signin .form-control {
    height: auto;
    font-size: 16px;
}

.form-signin .form-floating:focus-within {
    z-index: 2;
}

.top {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
    height: auto;
}

.middle {
    margin-bottom: -1px;
    border-radius: 0;
}

.bottom {
    margin-bottom: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.footer .btn {
    margin-top: 1rem;
}

.footer p {
    margin-top: 1rem !important;
    text-align: center;
}

.alert-footer {
    display: none;
    margin-top: 1rem;
}

.avatar-ctn {
    text-align: center;
}

.avatar {
    width: 65%;
    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
}

